testdata/invalid/unknown_event_field.hzn
package invalid

type Event struct {
    pid u32
}

map Events ringbuf[Event]

@tracepoint("sched:sched_process_exec")
func Bad(ctx tracepoint.Exec) i32 {
    event := Events.reserve()
    if event == nil {
        return 0
    }
    event.missing = 1
    Events.submit(event)
    return 0
}
